--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 Software Testing and Maintenance Team Repo
 Tristan Breetz
 Emily Grace
-Reece Last name
+Reece Wienandt
 Sam
 Josh Laffoon
 Daniel Herr
